# md2office

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml  styles-mapping-linagora.yaml  styles-mapping.yaml
docs/: .~lock.documentation.docx#  ARCHITECTURE.md  DOCKER.md  ERROR_HANDLING.md  README.fr.md  README.md  documentation.md
src/md2office/: __init__.py  cli.py  main.py
src/md2office/api/: __init__.py  models.py  routes.py
src/md2office/builder/: __init__.py  admonition_builder.py  docx_builder.py  list_builder.py  style_mapper.py  table_builder.py
src/md2office/core/: __init__.py  config.py  converter.py  exceptions.py
src/md2office/parser/: __init__.py  elements.py  markdown_parser.py  renderer.py
src/md2office/template/: __init__.py  engine.py  generator.py  storage.py
src/md2office/utils/: __init__.py  helpers.py
templates/: default.docx  linagora.docx  professional.docx
tests/: __init__.py  conftest.py  test_converter.py
tests/test_api/: test_routes.py
tests/test_builder/: __init__.py  test_docx_builder.py
tests/test_parser/: test_markdown_parser.py
